--- a/style.css
+++ b/style.css
@@ -70,3 +70,14 @@ h2,h3,h4{
 footer{
     text-align: center;
 }
+.notification{
+    background: whitesmoke;
+    padding: 10px;
+    border:3px solid gray;
+    width:250px;
+    font-weight:bold;
+    color: #283618;
+    position: fixed;
+    top: 0px;
+    right: 0px;
+}
